man/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - analysis:
          templates:
          - templateName: canary-check
          args:
          # pod template hash from the stable ReplicaSet
          - name: stable-hash
            valueFrom:
              podTemplateHashValue: Stable
          # pod template hash from the latest ReplicaSet
          - name: latest-hash
            valueFrom:
              podTemplateHashValue: Latest          
          # - name: rollout-status
          #   valueFrom:
          #     fieldRef:
          #       fieldPath: status.alb.canaryTargetGroup.name          
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080          
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
