man/rollouts-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports:
  - name: http
    targetPort: http
    protocol: TCP
    port: 80
  selector:
    app: rollouts-demo
