man/rollouts-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rollouts-demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rollouts-demo
            port:
              number: 80
